--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1235,6 +1235,7 @@
         <script src="/mixed/js/dom-data-binder.js"></script>
         <script src="/mixed/js/html-template-collection.js"></script>
         <script src="/mixed/js/object-property-accessor.js"></script>
+        <script src="/mixed/js/selector-observer.js"></script>
         <script src="/mixed/js/task-accumulator.js"></script>
         <script src="/mixed/js/text-to-speech-audio.js"></script>
 
