--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1250,7 +1250,7 @@
         <script src="/bg/js/template-renderer-proxy.js"></script>
 
         <script src="/bg/js/settings/keyboard-mouse-input-field.js"></script>
-        <script src="/bg/js/settings/modal.js"></script>
+        <script src="/bg/js/settings/modal-jquery.js"></script>
         <script src="/bg/js/settings/profile-conditions-ui.js"></script>
 
         <script src="/bg/js/settings/anki-controller.js"></script>
