--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -29,29 +29,29 @@
                 </p>
 
                 <div class="form-group">
-                    <label for="profile-active">Active profile</label>
-                    <select class="form-control" id="profile-active"></select>
+                    <label for="profile-active-select">Active profile</label>
+                    <select class="form-control" id="profile-active-select"></select>
                 </div>
 
                 <div class="form-group">
-                    <label for="profile-target">Modifying profile</label>
+                    <label for="profile-target-select">Modifying profile</label>
                     <div class="input-group">
                         <div class="input-group-btn">
-                            <button class="btn btn-default" id="profile-add" title="Add"><span class="glyphicon glyphicon-plus"></span></button>
-                            <button class="btn btn-default" id="profile-move-up" title="Move up"><span class="glyphicon glyphicon-arrow-up"></span></button>
-                            <button class="btn btn-default" id="profile-move-down" title="Move down"><span class="glyphicon glyphicon-arrow-down"></span></button>
-                            <button class="btn btn-default" id="profile-copy" title="Copy"><span class="glyphicon glyphicon-copy"></span></button>
+                            <button class="btn btn-default" id="profile-add-button" title="Add"><span class="glyphicon glyphicon-plus"></span></button>
+                            <button class="btn btn-default" id="profile-move-up-button" title="Move up"><span class="glyphicon glyphicon-arrow-up"></span></button>
+                            <button class="btn btn-default" id="profile-move-down-button" title="Move down"><span class="glyphicon glyphicon-arrow-down"></span></button>
+                            <button class="btn btn-default" id="profile-copy-button" title="Copy"><span class="glyphicon glyphicon-copy"></span></button>
                         </div>
-                        <select class="form-control profile-form-manual" id="profile-target"></select>
+                        <select class="form-control profile-form-manual" id="profile-target-select"></select>
                         <div class="input-group-btn">
-                            <button class="btn btn-danger" id="profile-remove" title="Remove"><span class="glyphicon glyphicon-remove"></span></button>
+                            <button class="btn btn-danger" id="profile-remove-button" title="Remove"><span class="glyphicon glyphicon-remove"></span></button>
                         </div>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="profile-name">Profile name</label>
-                    <input type="text" id="profile-name" class="form-control">
+                    <label for="profile-name-input">Profile name</label>
+                    <input type="text" id="profile-name-input" class="form-control">
                 </div>
 
                 <div class="form-group">
@@ -75,7 +75,7 @@
                     <button class="btn btn-default" id="profile-add-condition-group">Add Condition Group</button>
                 </div>
 
-                <div class="modal fade" tabindex="-1" role="dialog" id="profile-copy-modal">
+                <div class="modal fade" tabindex="-1" role="dialog" id="profile-copy">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -84,17 +84,17 @@
                             </div>
                             <div class="modal-body">
                                 <p>Select which profile to copy options from:</p>
-                                <select class="form-control" id="profile-copy-source"></select>
+                                <select class="form-control" id="profile-copy-source-select"></select>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-primary" id="profile-copy-confirm">Copy Profile</button>
+                                <button type="button" class="btn btn-primary" id="profile-copy-confirm-button">Copy Profile</button>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="modal fade" tabindex="-1" role="dialog" id="profile-remove-modal">
+                <div class="modal fade" tabindex="-1" role="dialog" id="profile-remove">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -102,11 +102,11 @@
                                 <h4 class="modal-title">Confirm profile removal</h4>
                             </div>
                             <div class="modal-body">
-                                Are you sure you want to delete the profile <em id="profile-remove-modal-profile-name"></em>?
+                                Are you sure you want to delete the profile <em id="profile-remove-name"></em>?
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-danger" id="profile-remove-confirm">Remove Profile</button>
+                                <button type="button" class="btn btn-danger" id="profile-remove-confirm-button">Remove Profile</button>
                             </div>
                         </div>
                     </div>
