Remove limits for popup horizontal/vertical offsets (#960)

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -262,11 +262,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <label for="popup-horizontal-offset">Horizontal popup offset <span class="label-light">(in pixels)</span></label>
-                            <input type="number" min="0" id="popup-horizontal-offset" class="form-control" data-setting="general.popupHorizontalOffset">
+                            <input type="number" id="popup-horizontal-offset" class="form-control" data-setting="general.popupHorizontalOffset">
                         </div>
                         <div class="col-xs-6">
                             <label for="popup-vertical-offset">Vertical popup offset <span class="label-light">(in pixels)</span></label>
-                            <input type="number" min="0" id="popup-vertical-offset" class="form-control" data-setting="general.popupVerticalOffset">
+                            <input type="number" id="popup-vertical-offset" class="form-control" data-setting="general.popupVerticalOffset">
                         </div>
                     </div>
                 </div>
@@ -275,11 +275,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <label for="popup-horizontal-offset2">Horizontal popup offset for vertical text <span class="label-light">(in pixels)</span></label>
-                            <input type="number" min="0" id="popup-horizontal-offset2" class="form-control" data-setting="general.popupHorizontalOffset2">
+                            <input type="number" id="popup-horizontal-offset2" class="form-control" data-setting="general.popupHorizontalOffset2">
                         </div>
                         <div class="col-xs-6">
                             <label for="popup-vertical-offset2">Vertical popup offset for vertical text <span class="label-light">(in pixels)</span></label>
-                            <input type="number" min="0" id="popup-vertical-offset2" class="form-control" data-setting="general.popupVerticalOffset2">
+                            <input type="number" id="popup-vertical-offset2" class="form-control" data-setting="general.popupVerticalOffset2">
                         </div>
                     </div>
                 </div>
