Fix class name (#961)

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -168,7 +168,7 @@
                     <label><input type="checkbox" id="show-pitch-accent-downstep-notation" data-setting="general.showPitchAccentDownstepNotation"> Show downstep notation for pitch accents</label>
                 </div>
 
-                <div class="checkbox options-position">
+                <div class="checkbox options-advanced">
                     <label><input type="checkbox" id="show-pitch-accent-position-notation" data-setting="general.showPitchAccentPositionNotation"> Show position notation for pitch accents</label>
                 </div>
 
