Dictionary controllers update (#965)
* Make purge notification optional

* Support multiple warning nodes

* Add support for optional count info

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -679,7 +679,7 @@
                 </div>
 
                 <div class="text-danger" id="dictionary-delete-all-status" hidden>Dictionary data is being purged, please be patient...</div>
-                <div class="alert alert-warning" id="dictionary-warning" hidden>No dictionaries have been installed</div>
+                <div class="alert alert-warning no-dictionaries-installed-warning" hidden>No dictionaries have been installed</div>
                 <div class="alert alert-danger" id="dictionary-error" hidden></div>
 
                 <div id="dictionary-list"></div>
