Duplicate scope options (#955)
* Add deck-root duplicate scope option

* Implement support for deck-root scope

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -926,6 +926,7 @@
                         <select class="form-control" id="duplicate-scope" data-setting="anki.duplicateScope">
                             <option value="collection">Collection</option>
                             <option value="deck">Deck</option>
+                            <option value="deck-root">Deck root</option>
                         </select>
                     </div>
 
