Use <strong> styling for list keys (#991)

--- a/ext/bg/pitch-accents-preview.html
+++ b/ext/bg/pitch-accents-preview.html
@@ -20,19 +20,19 @@
 
 <ul>
     <li>
-        <em>Downstep notation</em> -
+        <strong>Downstep notation</strong> -
         <span class="format-preview">
             <span class="term-pitch-accent-characters"><span class="term-pitch-accent-character" data-position="0" data-pitch="high" data-pitch-next="low"><span class="term-pitch-accent-character-inner">よ</span></span><span class="term-pitch-accent-character" data-position="1" data-pitch="low" data-pitch-next="low"><span class="term-pitch-accent-character-inner">む</span></span></span>
         </span>
     </li>
     <li>
-        <em>Downstep position</em> -
+        <strong>Downstep position</strong> -
         <span class="format-preview">
             <span class="term-pitch-accent-position">1</span>
         </span>
     </li>
     <li>
-        <em>Graph</em> -
+        <strong>Graph</strong> -
         <span class="format-preview">
             <span class="term-pitch-accent-details">
                 <svg class="term-pitch-accent-graph" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 100">
