Fix byte count labels (#998)
* Add 'TB' label

* Prevent overflow

* Fix storage information on the old settings page

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -818,14 +818,14 @@
                     </p>
                 </div>
 
-                <div id="storage-use" hidden>
-                    <p class="help-block" class="storage-use-invalid">
+                <div id="storage-use">
+                    <p class="help-block storage-use-invalid">
                         Yomichan is using an indeterminate amount of storage.
                     </p>
-                    <p class="help-block" class="storage-use-finite" hidden>
+                    <p class="help-block storage-use-finite" hidden>
                         Yomichan is using approximately <strong class="storage-usage"></strong> of <strong class="storage-quota"></strong>.
                     </p>
-                    <p class="help-block" class="storage-use-infinite" hidden>
+                    <p class="help-block storage-use-infinite" hidden>
                         Yomichan is permitted <strong>unlimited storage</strong>.
                     </p>
                 </div>
