--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -23,7 +23,9 @@
     </div></div><div class="navigation-header-spacer"></div>
 
     <div class="scan-disable" id="query-parser-container" hidden>
-        <div id="query-parser-select-container" class="input-group"></div>
+        <div class="search-option" id="query-parser-mode-container" hidden>
+            <select id="query-parser-mode-select"></select>
+        </div>
         <div id="query-parser-content"></div>
     </div>
 
