Add duplicate check option (#1012)
* Add anki.checkForDuplicates option

* Use checkForDuplicates for button display

* Add property to card creation

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -922,6 +922,11 @@
                     </div>
 
                     <div class="form-group options-advanced">
+                        <label>Duplicates</label><br>
+                        <label style="font-weight: normal;"><input type="checkbox" data-setting="anki.checkForDuplicates"> Check for duplicate cards</label><br>
+                    </div>
+
+                    <div class="form-group options-advanced">
                         <label for="duplicate-scope">Duplicate scope</label>
                         <select class="form-control" id="duplicate-scope" data-setting="anki.duplicateScope">
                             <option value="collection">Collection</option>
