--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -21,7 +21,7 @@
         <div class="term-entry-body-section term-pitch-accent-container"><ol class="term-entry-body-section-content term-pitch-accent-group-list"></ol></div>
         <div class="term-entry-body-section term-definition-container"><ol class="term-entry-body-section-content term-definition-list"></ol></div>
     </div>
-    <pre class="debug-info"></pre>
+    <div class="debug-info"><a class="debug-log-link">Log debug info to console</a></div>
 </div></template>
 <template id="term-expression-template"><div class="term-expression"><span class="term-expression-text source-text"></span><div class="term-expression-details">
     <button class="action-button action-play-audio" data-icon="play-audio" title="Play audio"></button>
