--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -59,6 +59,7 @@
 
 </div></div>
 
+<!-- Scripts -->
 <script src="/mixed/lib/wanakana.min.js"></script>
 
 <script src="/mixed/js/core.js"></script>
