--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+<div class="content"><div class="content-center">
+
     <div id="spinner" hidden><img src="/mixed/img/spinner.gif"></div>
 
     <div id="navigation-header" class="navigation-header" hidden><div class="navigation-header-actions">
@@ -47,6 +49,9 @@
         </div>
     </div>
 
+</div></div>
+
+<!-- Scripts -->
 <script src="/mixed/js/core.js"></script>
 <script src="/mixed/js/yomichan.js"></script>
 <script src="/mixed/js/comm.js"></script>
@@ -78,5 +83,6 @@
 <script src="/fg/js/float.js"></script>
 
 <script src="/fg/js/float-main.js"></script>
+
 </body>
 </html>
