Display layout updates (#1032)
* Fix display scroll not always using the right position

* Update display layout and scroll method

* Fix border size

--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -15,7 +15,9 @@
 </head>
 <body>
 
-<div class="content"><div class="content-center">
+<div class="content" id="content"><div class="content-body" id="content-body">
+
+    <span tabindex="-1" id="content-scroll-focus"></span>
 
     <div id="spinner" hidden><img src="/mixed/img/spinner.gif"></div>
 
