--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -16,7 +16,9 @@
 </head>
 <body>
 
-<div class="content"><div class="content-center">
+<div class="content" id="content"><div class="content-body" id="content-body">
+
+    <span tabindex="-1" id="content-scroll-focus"></span>
 
     <div id="intro">
         <h1>Yomichan Search</h1>
